Changes for 2.1.0

New features:
..F....... [ZBXNEXT-1019] updated jQuery to 1.7.2 and jQuery UI to 1.8.20 (Vedmak)
..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)

Bug fixes:
..F....... [ZBX-4985] improved hostgroup area icons layout (Vedmak)
..F....... [ZBX-5078] fixed item prototype application linking when fully cloning a host (Pavels)
A.F....... [ZBX-5053] fixed Y max/min value validation for calculated graph scales (Eduard)
A.F....... [ZBX-5029] fixed inherited item interface being updated incorrectly when changing it's type (Pavels)
A.F....... [ZBX-4958] fixed undefined indexes when switching auth method (Eduard)
..F....... [ZBX-5071] fixed macros being deleted when leaving the "macro" and "value" fields empty (Pavels)
.......PS. [ZBX-5076] fixed possible server or proxy crash when using Calculated, DB Monitor, SSH or Telnet items (Sasha)
A.F....... [ZBX-5032] fixed select mediatypes in User (Eduard)
..F....... [ZBX-4864] fixed graph Y axis label alignment (Pavels)
..F....... [ZBXNEXT-1225] fixed multiple design issues (Pavels)
..F....... [ZBX-4932] fixed weekly top 100 trigger report using incorrect time period (Pavels)
..F....... [ZBX-3106] fixed supported types for calculated items (Toms)
A......... [ZBX-5030] fixed IT services query in Oracle (Eduard)
....I..... [ZBX-5041] changed {HOSTNAME} macro to {HOST.NAME} in the default templates (Sasha)
A.F....... [ZBX-4974] fixed and improved several popups (Toms)
..F....... [ZBX-5020] fixed undefined functions prior requirement check in setup.php (Toms)
..F....... [ZBX-5016] fixed graphs borders (Eduard)
A......... [ZBX-4962] fixed varchar default saving in mysql (Eduard)
..F....... [ZBX-4977] fixed GUI messaging (Eduard)
A......... [ZBX-4923] fixed ids sorting before update and delete (Eduard)
A......... [ZBX-4994] fixed sql error when try to remove host interface used in items (Vedmak)
..F....... [ZBX-4918] fixed value mapping for {ITEM.VALUE} and {ITEM.LASTVALUE} macros (Vedmak)