@@ -17,8 +17,8 @@
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
-?>
-<?php
+
+
 require_once dirname(__FILE__).'/include/config.inc.php';
 require_once dirname(__FILE__).'/include/hosts.inc.php';
 
@@ -151,10 +151,7 @@ elseif (isset($_REQUEST['save'])) {
 	unset($_REQUEST['save']);
 }
 elseif (isset($_REQUEST['delete']) && isset($_REQUEST['groupid'])) {
-	DBstart();
 	$result = API::HostGroup()->delete($_REQUEST['groupid']);
-	$result = DBend($result);
-
 	show_messages($result, _('Group deleted'), _('Cannot delete group'));
 
 	if ($result) {
@@ -236,7 +233,7 @@ if (isset($_REQUEST['form'])) {
 	$options = array(
 		'not_proxy_host' => 1,
 		'sortfield' => 'name',
-		'editable' => 1,
+		'editable' => true,
 		'output' => API_OUTPUT_EXTEND
 	);
 	$data['db_groups'] = API::HostGroup()->get($options);
@@ -337,5 +334,6 @@ else {
 	$hostgroupView->render();
 	$hostgroupView->show();
 }
+
 require_once dirname(__FILE__).'/include/page_footer.php';
-?>
+
