@@ -17,14 +17,13 @@
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
-?>
-<?php
+
+
 $hostgroupWidget = new CWidget();
 $hostgroupWidget->addPageHeader(_('CONFIGURATION OF HOST GROUPS'));
 
 // create form
 $hostgroupForm = new CForm();
-$hostgroupForm->setName('hostgroupForm');
 $hostgroupForm->addVar('form', $this->data['form']);
 if (isset($this->data['groupid'])) {
 	$hostgroupForm->addVar('groupid', $this->data['groupid']);
@@ -32,7 +31,7 @@ if (isset($this->data['groupid'])) {
 
 // create hostgroup form list
 $hostgroupFormList = new CFormList('hostgroupFormList');
-$hostgroupFormList->addRow(_('Group name'), new CTextBox('name', $this->data['name'], ZBX_TEXTBOX_STANDARD_SIZE));
+$hostgroupFormList->addRow(_('Group name'), new CTextBox('name', $this->data['name'], ZBX_TEXTBOX_STANDARD_SIZE, false, 64));
 
 // append groups and hosts to form list
 $groupsComboBox = new CComboBox('twb_groupid', $this->data['twb_groupid'], 'submit()');
@@ -40,9 +39,11 @@ $groupsComboBox->addItem('0', _('All'));
 foreach ($this->data['db_groups'] as $row) {
 	$groupsComboBox->addItem($row['groupid'], $row['name']);
 }
+
 $hostsComboBox = new CTweenBox($hostgroupForm, 'hosts', $this->data['hosts'], 25);
 foreach ($this->data['db_hosts'] as $host) {
-	if (!isset($this->data['hosts'][$host['hostid']])) { // add all hosts except selected
+	// add all hosts except selected
+	if (!isset($this->data['hosts'][$host['hostid']])) {
 		$hostsComboBox->addItem($host['hostid'], $host['name']);
 	}
 }
@@ -71,7 +72,7 @@ if (empty($this->data['groupid'])) {
 else {
 	$deleteButton = new CButtonDelete(_('Delete selected group?'), url_param('form').url_param('groupid'));
 	if (empty($this->data['deletableHostGroups'])) {
-		$deleteButton->setAttribute('disabled', 'disabled');
+		$deleteButton->attr('disabled', 'disabled');
 	}
 	$hostgroupForm->addItem(makeFormFooter(
 		array(new CSubmit('save', _('Save'))),
@@ -83,5 +84,5 @@ else {
 }
 
 $hostgroupWidget->addItem($hostgroupForm);
+
 return $hostgroupWidget;
-?>
