@@ -5,6 +5,7 @@ New features:
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-5096] fixed error when create hostgroup with too long name (Vedmak)
 ..F....... [ZBX-4985] improved hostgroup area icons layout (Vedmak)
 ..F....... [ZBX-5078] fixed item prototype application linking when fully cloning a host (Pavels)
 A.F....... [ZBX-5053] fixed Y max/min value validation for calculated graph scales (Eduard)
@@ -39,6 +40,7 @@ New features:
 ..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-5096] fixed error when create hostgroup with too long name (Vedmak)
 ..F....... [ZBX-4985] improved hostgroup area icons layout (Vedmak)
 ..F....... [ZBX-5078] fixed item prototype application linking when fully cloning a host (Pavels)
 A.F....... [ZBX-5053] fixed Y max/min value validation for calculated graph scales (Eduard)
